# evo-impfit

./: .gitignore  README.md  SHOWCASE.md  pyproject.toml
data/: rlc_case1_target.csv  rlc_case1_target.json
experiments/comparison-sanity/: README.md
experiments/csv-ingest-sanity/: README.md
experiments/showcase-smoke/: README.md
experiments/smoke-femeif/: README.md
output/comparison-sanity/: history.csv  runs.csv  summary.csv  summary.json
output/fit-csv-sanity/: best_fit.csv  history.csv  summary.json
output/smoke-femeif/: best_fit.csv  history.csv  summary.json
output/smoke-wbeif/: best_fit.csv  history.csv  summary.json
src/evo_impfit/: __init__.py  circuits.py  cli.py  data.py  experiments.py  features.py  optimizer.py  showcase.py
tests/: test_smoke.py
