[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-impfit"
version = "0.1.0"
description = "Feature-engineering enabled evolutionary impedance fitting prototype."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "matplotlib>=3.8"]

[project.scripts]
evo-impfit = "evo_impfit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
